# ruc-mcp

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  server.json  temp_auto_generated_workflow.py
.github/workflows/: ci.yml  publish-ghcr.yml
assets/: per-diem--virgin.xlsx  per-diem.csv  per-diem.xlsx
host_integrations/codex/plugin/: .mcp.json  README.md
host_integrations/codex/plugin/.codex-plugin/: plugin.json
host_integrations/cursor/plugin/: README.md  mcp.json
host_integrations/cursor/plugin/.cursor-plugin/: plugin.json
host_integrations/cursor/plugin/skills/render-unto-caesar/: SKILL.md
host_integrations/vs_code/extension/: .vscodeignore  LICENSE  README.md  extension.js  package-lock.json  package.json
src/ruc_mcp/: __init__.py  __main__.py  server--old.py  server.py
tests/: irishnames.py  test_server.py
tests/sample_data/: customers.csv  er-intake-200.txt  nurse-triage-200.txt  nurse-triage.txt
