[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ruc-mcp"
version = "0.0.0"
description = "Render Unto Caesar MCP scaffold"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.3.1",    
]

[project.optional-dependencies]
datasci = [
    "numpy>=2.0",
    "pandas>=2.2",
    "scipy>=1.13",
    "scikit-learn>=1.5",
    "statsmodels>=0.14",
]

[tool.setuptools.packages.find]
where = ["src"]
