[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ruc-mcp"
version = "0.1.3"
description = "Render Unto Caesar: An MCP Server that fuses LLM contextual intelligence with procedural code reliability."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.3.1",
]

[project.optional-dependencies]
officedocs = [
    "openpyxl>=3.1",
    "odfpy>=1.4",
    "python-docx>=1.1",
    "docutils>=0.21",
    "beautifulsoup4>=4.12",
    "pypdf>=4.2",
]

datasci = [
    "numpy>=2.0",
    "pandas>=2.2",
    "scipy>=1.13",
    "scikit-learn>=1.5",
    "statsmodels>=0.14",
]

[tool.setuptools.packages.find]
where = ["src"]
