[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ruc-mcp"
version = "0.1.7"
description = "Render Unto Caesar: Get the contextual intelligence of AI with the procedural rigor of code"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.3.1",
]

[project.optional-dependencies]
officedocs = [
    "openpyxl>=3.1",
    "odfpy>=1.4",
    "python-docx>=1.1",
    "docutils>=0.21",
    "markdown-it-py>=3.0",
    "beautifulsoup4>=4.12",
    "pypdf>=4.2",
]

datasci = [
    "numpy>=2.0",
    "pandas>=2.2",
    "scipy>=1.13",
    "scikit-learn>=1.5",
    "statsmodels>=0.14",
]

[tool.setuptools.packages.find]
where = ["src"]
